Fixed issues on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -34,7 +34,7 @@ body {
 	line-height: 1.5;
 	color: #000;
   @include max($midwidth) {
-    padding-top: 80px;
+    padding-top: 70px;
   }
 }
 h1,h2,h3,h4,h5,h6 {
@@ -169,6 +169,8 @@ a {
     height: 70px;
     z-index: 100;
     background: #FFF;
+    padding-left: 15px;
+    padding-right: 15px;
     .site-logo {
       position: absolute;
       top: 10px;
@@ -269,7 +271,7 @@ body.home {
   height: 40px;
   position: absolute;
   top: 15px;
-  right: 0;
+  right: 10px;
   z-index: 99999;
   background: transparent;
   cursor: pointer;
